--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: catholic_liturgy
-description: Catholic LIturgy
+description: A package to calculate catholic liturgy of a day
 version: 0.0.2
 homepage: https://github.com/flavio20002/Catholic-Liturgy-Dart
 
