--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: catholic_liturgy
-description: A package to calculate catholic liturgy of a day
-version: 0.0.2
+description: A package to calculate the Catholic Liturgy for every date and obtain liturgy description in multiple languages.
+version: 0.0.3
 homepage: https://github.com/flavio20002/Catholic-Liturgy-Dart
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
